chnages made acording to the request from chatgpt so can resolve the issue of background image which is not showing when deployed to github

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .hero-section {
-    background-image: url("../images/bacground.jpg");
+    background-image: url("/Expression-Design/images/bacground.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
